# job-alert-agent

./: .coverage  .env.example  .gitignore  README.es.md  README.md  pyproject.toml  pytest_out2.txt  pytest_verify.txt  pytest_verify2.txt  pytest_verify3.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  digest.yml  pipeline.yml
job_alert/: __main__.py  config.py  cv_summary.py  db.py  i18n.py  logging_setup.py  notion_sync.py  scorer.py  telegram_digest.py
job_alert/analytics/: __init__.py  analyze.py  export.py  quality.py  schema.py
job_alert/sources/: __init__.py  getonboard.py  remoteok.py
migrations/: 001_init.sql
scripts/: apply_migration.py  archive_notion_skips.py  fetch_target_jds.py  status.py  target_jds_output.md
tests/: conftest.py  test_config.py  test_db.py  test_i18n.py  test_notion_sync_http.py  test_notion_sync_pure.py  test_scorer_llm.py  test_scorer_pure.py  test_telegram_digest_http.py  test_telegram_format.py
tests/analytics/: test_analyze.py  test_export.py  test_quality.py  test_schema.py
tests/sources/: test_getonboard_http.py  test_getonboard_normalize.py  test_remoteok_http.py  test_remoteok_normalize.py
