[project]
name = "job-alert-agent"
version = "0.1.0"
description = "Agente que scrapea ofertas laborales, las califica con un LLM contra mi CV, y manda digest a Telegram + archivo a Notion"
authors = [{ name = "sebpost2", email = "sebpost02@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
  "asyncpg>=0.29",
  "python-dotenv>=1.0",
  "groq>=0.11",
  "notion-client>=2.2",
  "truststore>=0.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["job_alert*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q --strict-markers --strict-config --cov --cov-report=term-missing --cov-fail-under=90"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:asyncpg.*",
]

[tool.coverage.run]
branch = true
source = ["job_alert"]
omit = [
  "job_alert/__main__.py",   # thin CLI dispatcher exercised by integration runs
  "job_alert/logging_setup.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_also = [
  "if __name__ == .__main__.:",
  "pragma: no cover",
  "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["job_alert", "tests"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_reexport = true
disallow_untyped_decorators = true

[[tool.mypy.overrides]]
module = ["truststore", "respx", "asyncpg", "asyncpg.*"]
ignore_missing_imports = true
